# auli

./: .env.example  .gitignore  .mcp.json  APLICAR.md  IMPLEMENTACAO_auli-anon.md  INTEGRACAO-scraper-ba.md  INTEGRACAO-scraper-pe.md  PLANO_auli_contract.md  README.md  TAREFA-CANONIZADOR.md  TAREFA-EXTRACAO.md  TAREFA-HIGIENE-POS-FASE2.md  TAREFA-MCP(1).md  TAREFA-SCRAPERS-FASE2.md  TAREFA-SNAPSHOT-FASE1.md  TAREFA-models-para-raiz.md  auli-anon_pendencias.md  auli_code.md  auli_features.md  auli_operations.md  auli_pendencias.md  data_integration_phase0.md  descoberta-AL.md  descoberta-ac.md  descoberta-am.md  descoberta-ap.md  descoberta-df.md  descoberta-es.md  descoberta-ma.md  descoberta-pa.md  descoberta-pb.md  descoberta-rn.md  descoberta-ro.md  descoberta-rr.md  descoberta-se.md  descoberta-to.md  descobertas.md  findings-implementation-plan.md  findings.md  go_waf.md  (+10 more)
auli/: Cargo.toml  README.md  entities
auli-collections/: .gitignore  Cargo.toml  description.md  rustfmt.toml
auli-collections/data/rs/: portal-faqs.txt  servicos-a-empresas.json  servicos-ao-cidadao.json  servicos.json
auli-collections/data/sc/: servicos-a-empresas.json  servicos-a-estudantes.json  servicos-index.json
auli-collections/src/domain/: collections.rs  entities.rs  mod.rs
auli-collections/src/entities/sc/: entity.json  prompt.txt
auli-collections/src/faqs/: faq.rs  fetch.rs  mod.rs
auli-collections/src/faqs/legacy/: extract_page_urls.rs  main.rs  types.rs
auli-collections/src/servicos/: extrair_descricoes.rs  mod.rs  types.rs
auli-engine/crates/auli-cli/: Cargo.toml
auli-engine/crates/auli-cli/src/: config.rs  entities.rs  error.rs  lib.rs
auli-engine/crates/auli-cli/tests/: api.rs  packs_smoke.rs
auli-engine/crates/auli-core/: Cargo.toml
auli-engine/crates/auli-core/src/: lib.rs  manifest.rs
auli-server/: .gitignore  CLAUDE.md  Cargo.toml  README.md  readme.md
auli-server/crates/: SCRAPERS.md
auli-server/crates/auli-anon/: Cargo.toml
auli-server/crates/auli-anon/src/: lib.rs
auli-server/crates/auli-anon/tests/: fixtures.rs
auli-server/crates/auli-cli/: Cargo.toml
auli-server/crates/auli-cli/examples/: retrieval_test.rs
auli-server/crates/auli-cli/src/: config.rs  docs.rs  entities.rs  error.rs  lib.rs  llm.rs  main.rs  mcp.rs  packs.rs  rag.rs  state.rs  update.rs
auli-server/crates/auli-cli/tests/: packs_smoke.rs  retrieve_api.rs
auli-server/crates/auli-collections/: Cargo.toml  description.md  rustfmt.toml
auli-server/crates/auli-collections/src/: canonizar.rs  derive_faqs.rs  derive_pareceres.rs  errors.rs  extracao.rs  grafo.rs  indice.rs  main.rs  process.rs  sinopse.rs  snapshot.rs
auli-server/crates/auli-contract/: Cargo.toml
auli-server/crates/auli-contract/src/: lib.rs  mddoc.rs  snapshot.rs
auli-server/crates/auli-core/src/: corpus.rs  embed.rs  manifest.rs
auli-server/crates/auli-llm/: Cargo.toml
auli-server/crates/auli-llm/src/: lib.rs
auli-server/crates/auli-retrieval/: Cargo.toml
auli-server/crates/auli-retrieval/src/: lib.rs
auli-server/crates/auli-scraper-ba/: Cargo.toml
auli-server/crates/auli-scraper-ba/src/: scrape.rs
auli-server/crates/auli-scraper-ce/: Cargo.toml
auli-server/crates/auli-scraper-ce/src/: ce.rs  main.rs
auli-server/crates/auli-scraper-kit/: Cargo.toml
auli-server/crates/auli-scraper-kit/src/: agent.rs  cache.rs  lib.rs  servico.rs  snapshot.rs
auli-server/crates/auli-scraper-mg/: Cargo.toml
auli-server/crates/auli-scraper-mg/src/: main.rs
auli-server/crates/auli-scraper-pe/: Cargo.toml
auli-server/crates/auli-scraper-pe/src/: main.rs  scrape.rs
auli-server/crates/auli-scraper-pr/: Cargo.toml
auli-server/crates/auli-scraper-pr/src/: main.rs  scrape.rs
auli-server/crates/auli-scraper-rj/: Cargo.toml
auli-server/crates/auli-scraper-rj/src/: main.rs  rj.rs
auli-server/crates/auli-scraper-rs/: Cargo.toml
auli-server/crates/auli-scraper-rs/src/: errors.rs  main.rs
auli-server/crates/auli-scraper-sc/: Cargo.toml
auli-server/crates/auli-scraper-sc/src/: main.rs  sc.rs
auli-server/crates/auli-scraper-sp/: Cargo.toml
auli-server/crates/auli-scraper-sp/src/: main.rs  scrape.rs
auli-server/crates/scrapers/: SCRAPERS.md
auli-server/crates/scrapers/auli-scraper-ac/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-al/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-am/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-ap/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-ba/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-ce/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-df/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-es/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-go/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-kit/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-ma/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-mg/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-ms/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-mt/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-pa/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-pb/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-pe/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-pi/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-pr/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-rj/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-rn/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-ro/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-rr/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-rs/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-sc/: Cargo.toml
auli-server/crates/scrapers/auli-scraper-se/: Cargo.toml
auli-server/src/clients/: vector_store.rs
auli-server/src/rag/: pipeline.rs
auli/crates/auli-cli/: Cargo.toml
auli/crates/auli-collections/: Cargo.toml
auli/crates/auli-contract/: Cargo.toml
auli/crates/auli-core/: Cargo.toml
auli/crates/vector-store/: Cargo.toml  README.md
auli/scripts/: start_all.sh  start_local.sh
(+433 files in other folders)
