[workspace]
resolver = "2"
members = [
    "crates/auli-contract",
    "crates/vector-store",
    "crates/auli-anon",
    "crates/auli-core",
    "crates/auli-llm",
    "crates/auli-retrieval",
    "crates/auli-cli",
    "crates/auli-collections",
    # Toda a frota de scrapers (kit + entidades). Glob: entidade nova não toca este arquivo.
    # Invariante: tudo sob `scrapers/` compila leve — depende no máximo de `auli-contract` +
    # `auli-scraper-kit`, NUNCA de fastembed/ort/auli-core. E vale a recíproca (D-C1): NADA fora
    # de `scrapers/` depende de nada aqui dentro — a fronteira (tipos + I/O) mora no contrato.
    "crates/scrapers/*",
]

# Single shared Cargo.lock across the workspace: the `server` and `update` modes can never pick
# different versions of fastembed/ort/the model, so the document encoder and the query encoder
# stay byte-identical by construction (the central reason for the single-workspace design).

[profile.release]
debug = 1
