[package]
name = "auli-cli"
version = "0.3.0"
edition = "2024"
description = "The `auli` binary: `auli server` (axum REST + RAG, read-only) and `auli update` (vectorize packs)."

# The binary is `auli`; the library is `auli_cli` so tests can build the router without a socket.
[[bin]]
name = "auli"
path = "src/main.rs"

[lib]
name = "auli_cli"
path = "src/lib.rs"

[dependencies]
auli-contract = { path = "../auli-contract" }
auli-core = { path = "../auli-core" }
auli-anon = { path = "../auli-anon" }
auli-llm = { path = "../auli-llm" }
auli-retrieval = { path = "../auli-retrieval" }
vector-store = { path = "../vector-store" }

# Web Framework & HTTP:
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["full"] }

# CLI:
clap = { version = "4.5", features = ["derive"] }

# Logging:
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Serialization & Data:
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2" # parse data/registry.toml

# Utilities:
derive_more = { version = "2.1.1", features = ["from", "display"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.44", features = ["serde"] }

# Error Handling:
thiserror = "2.0.18"

# Rate limiting (per-IP GCRA limiter for the public question/retrieve/mcp routes):
governor = "0.10.4"

# MCP (Model Context Protocol) — face para assistentes de IA (Claude, etc). Streamable HTTP
# aninhado no mesmo Router axum; ver src/mcp.rs. A feature `tower` (implícita via
# `server-side-http`) é o que permite o `nest_service`.
rmcp = { version = "2.2", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
schemars = "1.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
