[package]
name = "auli-collections"
version = "0.1.0"
edition = "2024"

# Derivação (process) do snapshot + registro de entidades. Sem rede, headless_chrome ou fastembed/ort.
[dependencies]
# Contrato compartilhado com o engine: Table<P>/Faq/Servico. O `process` preenche `text_to_embed`.
auli-contract = { path = "../auli-contract" }
# Cliente LLM compartilhado (passo `sinopse`). A collections segue síncrona: runtime tokio mínimo
# construído só no caminho da geração (block_on por documento), sem tornar main/run async.
auli-llm = { path = "../auli-llm" }
tokio = { version = "1.52.3", features = ["rt", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
anyhow = "1"
toml = "1.1.2"
