[package]
name = "auli-scraper-ba"
version = "0.1.0"
edition = "2024"

# Scraper da SEFAZ-BA (Carta de Serviços ao Cidadão; ASP clássico server-side — HTML pronto). SEM
# headless_chrome (classe do SC). Coleta = listagem única (206 serviços) + fichas de detalhe.
# Depende de auli-contract + o kit — nunca de fastembed/ort.
[dependencies]
auli-contract = { path = "../auli-contract" }
auli-scraper-kit = { path = "../auli-scraper-kit" }
# native-tls (OpenSSL): o servidor da SEFAZ-BA (IIS antigo) só oferece ciphers TLS 1.2 CBC
# (ex.: ECDHE-RSA-AES256-SHA384) e nenhum AEAD/GCM; o rustls (default do ureq) não suporta CBC e
# o handshake é resetado. OpenSSL negocia CBC, então este scraper usa o provider native-tls.
ureq = { version = "3", features = ["json", "native-tls"] }
scraper = "0.27.0"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
