[package]
name = "auli-scraper-mg"
version = "0.1.0"
edition = "2024"

# Scraper da SEF-MG (serviços, portal ServiceNow CSM). SEM headless_chrome: a Service Portal page
# API (`/api/now/sp/page`) devolve JSON completo com o header `X-Portal`. Depende de auli-contract +
# o kit — nunca de fastembed/ort.
[dependencies]
auli-contract = { path = "../auli-contract" }
auli-scraper-kit = { path = "../auli-scraper-kit" }
ureq = { version = "3", features = ["json"] }
scraper = "0.27.0"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
