[package]
name = "auli-scraper-pe"
version = "0.1.0"
edition = "2024"

# Scraper da SEFAZ-PE (serviços; SharePoint 2013 on-prem, server-side — HTML pronto). SEM
# headless_chrome (classe do SC). Fase 1: só o menu global `#menu_servicos` (1 requisição).
# Depende de auli-contract + o kit — nunca de fastembed/ort.
[dependencies]
auli-contract = { path = "../auli-contract" }
auli-scraper-kit = { path = "../auli-scraper-kit" }
ureq = { version = "3", features = ["json"] }
scraper = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
