[package]
name = "auli-scraper-pr"
version = "0.1.0"
edition = "2024"

# Scraper da SEFA-PR (serviços, portal Drupal server-side — HTML pronto). SEM headless_chrome (o
# conteúdo vem no HTML). Depende de auli-contract + o kit — nunca de fastembed/ort.
[dependencies]
auli-contract = { path = "../auli-contract" }
auli-scraper-kit = { path = "../auli-scraper-kit" }
ureq = { version = "3", features = ["json"] }
scraper = "0.27.0"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
