[package]
name = "auli-contract"
version = "0.1.0"
edition = "2021"

# Crate "magro" de contrato: APENAS serde. Nenhuma dependência pesada (sem fastembed/ort/aws-lc),
# para que tanto o scraper (auli-collections) quanto o engine possam depender dele sem arrastar a
# árvore do ONNX Runtime. É o lugar único onde produtor e consumidor concordam sobre a forma do dado.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
