[package]
name = "auli-scraper-am"
version = "0.1.0"
edition = "2024"

# Scraper da SEFAZ-AM (serviços, "Portfólio de Serviços" — Next.js App Router/RSC). SEM headless: a
# listagem inteira vem server-rendered no flight RSC (header `RSC: 1`), sem __NEXT_DATA__ nem
# /_next/data. Público (PF/PJ/Órgãos) sai das 3 rotas de perfil; classe = categoria da árvore.
# Só os campos da listagem (resumo curto) — o conteúdo rico do detalhe fica de fora (decisão de
# escopo). Depende de auli-contract + o kit — nunca de fastembed/ort. Decisões em descoberta-am.md.
[dependencies]
auli-contract = { path = "../../auli-contract" }
auli-scraper-kit = { path = "../auli-scraper-kit" }
ureq = { version = "3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
