[package]
name = "auli-scraper-ap"
version = "0.1.0"
edition = "2024"

# Scraper da SEFAZ-AP (serviços, www.sefaz.ap.gov.br — SPA Angular/FUSE). SEM headless: o catálogo
# rico está HARDCODED no bundle JS (arrays `mock*` no chunk lazy `categorias_routes`), não em API. O
# scraper descobre o chunk via runtime.js (hash dinâmico) e parseia os `mock*` (chaves NÃO minificadas
# → estável). Descrição = campo HTML `introducao.descricao`. Decisões em descobertas.md#ap.
[dependencies]
auli-contract = { path = "../../auli-contract" }
auli-scraper-kit = { path = "../auli-scraper-kit" }
ureq = { version = "3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
scraper = "0.27.0"   # html5ever: descricao é HTML (<b>/<br>/entidades)
regex = "1"          # parse dos objetos mock* no JS
