[package]
name = "auli-scraper-es"
version = "0.1.0"
edition = "2024"

# Scraper da SEFAZ-ES (serviços, portal.es.gov.br — SPA React sobre X-Via, MESMO stack do MT). SEM
# headless, SEM token: a listagem por órgão vem da API pública `POST /v1/search` (anônima) com
# `{groups:["CATALOG"], departmentSlug}`. Cada item já traz o conteúdo rico inline
# (`serviceLetterContent`, HTML), a categoria (classe) e `targets` (públicos) — sem chamada de
# detalhe. UA institucional AuliBot + ≥1s (D-PA-ROBOTS, ES = 2º caso). Decisões em descobertas.md#es.
[dependencies]
auli-contract = { path = "../../auli-contract" }
auli-scraper-kit = { path = "../auli-scraper-kit" }
ureq = { version = "3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
# scraper (html5ever) para transformar o `serviceLetterContent` (HTML rico) em texto, decodificando
# as entidades fora da tabela fixa do kit::decode_entities. Ver `html_to_text` (mesma lição do GO).
scraper = "0.27.0"
