[package]
name = "auli-scraper-kit"
version = "0.1.0"
edition = "2024"

# Apoio compartilhado dos scrapers — o COMO raspar: cache de páginas, builder do agent ureq e a
# agregação de serviços. A fronteira (tipos + I/O do snapshot) mora no `auli-contract` (D-C1).
# Exclusivo de `crates/scrapers/`; NUNCA depende de fastembed/ort/vector-store.
[dependencies]
auli-contract = { path = "../../auli-contract" }
ureq = "3"
